--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <p>
             Si tenés alguna consulta sobre la aplicación o su política de
             privacidad, podés contactarte con el desarrollador a través
-            de GitHub.
+            de GitHub o al Correo maximochamorro366gmail.com.
         </p>
     </div>
 
