--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
         <p>
             Si tenés alguna consulta sobre la aplicación o su política de
             privacidad, podés contactarte con el desarrollador a través
-            de GitHub o al Correo maximochamorro366@gmail.com
+            de GitHub o al correo:
+            <a href="mailto:maximocchamorro366@gmail.com"
+   style="color:#38bdf8; font-weight:bold;">
+    maximocchamorro366@gmail.com
+            </a>
+
         </p>
     </div>
 
