--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             de GitHub o al correo:
             <a href="mailto:maximocchamorro366@gmail.com"
    style="color:#38bdf8; font-weight:bold;">
-    maximocchamorro366@gmail.com
+    maximochamorro366@gmail.com
             </a>
 
         </p>
